--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "development",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/development/",
+  "homepage": "https://vtchoo.github.io/development/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "gh-pages": "^3.1.0",
     "typescript": "^4.2.3"
   }
